config: vitepress upgrade

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "learning-docs2",
+  "type": "module",
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.29",
+    "vitepress": "^1.0.0-rc.24",
     "vue": "^3.2.45"
   },
   "scripts": {
